# MRS-NFC-Manual-Input

./: .dockerignore  .gitignore  Dockerfile  README.md  bridge.js  content.css  content.js  debug_connections.ps1  debug_mers_menu.ps1  docker-compose.yml  help.html  manifest.json  nginx.conf  package-lock.json  package.json  popup.html  popup.js  release.sh  test_extract.cjs  test_history.js  test_sync_report.ps1
.github/workflows/: release.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/id/endri/mersremote/: MainActivity.kt  MersWidget.kt  WidgetConfigActivity.kt  WidgetSyncWorker.kt
android/app/src/main/res/drawable/: badge_date.xml  badge_loket.xml  badge_meal_malam.xml  badge_meal_siang.xml  badge_status.xml  badge_status_sudah.xml  ic_next.xml  ic_refresh.xml  widget_background.xml  widget_btn_background.xml
android/app/src/main/res/layout/: mers_widget.xml  widget_item.xml  widget_layout_2x2.xml  widget_layout_4x2.xml
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/xml/: mers_widget_info.xml  mers_widget_info_2x2.xml  mers_widget_info_4x2.xml
scripts/: android-debug.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
web/: index.html  manifest.webmanifest  mers-gen-map.js  sw.js
