[package]
name = "mers-nfc-tauri"
version = "1.0.2"
description = "MeRS NFC desktop wrapper"
authors = ["Endri"]
edition = "2021"

[lib]
name = "mers_nfc_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde_json = "1"
