[package]
name = "mers-nfc-tauri"
version = "1.0.88"
description = "MeRS NFC desktop wrapper"
authors = ["Endri"]
edition = "2021"

[lib]
name = "mers_nfc_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
regex = "1"
